tests/rosetta/out/C/bernoulli-numbers.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:44Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:44Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int bernoulli(int n) {
  list_int a = list_int_create(0);
  int m = 0;
  while (m <= n) {
    int tmp1_data[1];
    list_int tmp1 = {1, tmp1_data};
    tmp1.data[0] = (int)(1) / ((int)((m + 1)));
    list_int tmp2 = concat_list_int(a, tmp1);
    a = tmp2;
    int j = m;
    while (j >= 1) {
      a.data[j - 1] = ((int)(j)) * (a.data[j - 1] - a.data[j]);
      j = j - 1;
    }
    m = m + 1;
  }
  return a.data[0];
}

int _mochi_main() {
  for (int i = 0; i < 61; i++) {
    int b = bernoulli(i);
    if (num(b) != 0) {
      char *tmp3 = _str(num(b));
      char *numStr = tmp3;
      char *tmp4 = _str(denom(b));
      char *denStr = tmp4;
      char *tmp5 = _str(i);
      char *tmp6 = _str(i);
      printf("%d\n", "B(" + tmp6(2, " ") + ") =" + numStr.pad_start(45, " ") +
                         "/" + denStr);
    }
  }
  return 0;
}
int main() { return _mochi_main(); }
